--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,16 @@
-<p>
-  <span matBadge="4" matBadgeOverlap="false">Text with a badge</span>
-</p>
+<mat-sidenav-container>
 
-<p>
-  Button with a badge on the left
-  <button mat-raised-button color="primary"
-      matBadge="8" matBadgePosition="before" matBadgeColor="accent">
-    Action
-  </button>
-</p>
+  <mat-sidenav #sidenav >
+    <app-sidenav-list>  </app-sidenav-list>    
+  </mat-sidenav>
 
-<p>
-  Icon with a badge
-  <mat-icon matBadge="15" matBadgeColor="warn">home</mat-icon>
-    <!-- Include text description of the icon's meaning for screen-readers -->
-    <span class="cdk-visually-hidden">
-      Example with a home icon with overlaid badge showing the number 15
-    </span>
-</p>
+  <mat-sidenav-content>
+    <app-header (sideNavigationToggle)="sidenav.toggle()"></app-header>
+    <app-navtabs></app-navtabs>   
+  </mat-sidenav-content>
+
+  <router-outlet></router-outlet>
+  
+</mat-sidenav-container>
 
 
-<router-outlet></router-outlet>
