--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -4,7 +4,10 @@
             <mat-icon>menu</mat-icon>
         </button>
     </div>
-    <div>
-        <p>Logo</p>
+    <div class="logo-container">
+        <div fxLayout="column" fxLayoutAlign="center center" >
+
+           <img class="logo" src="assets/images/1.png" alt=""  >
+        </div>
     </div>
 </mat-toolbar>
