--- a/src/app/navigation/navtabs/navtabs.component.html
+++ b/src/app/navigation/navtabs/navtabs.component.html
@@ -1,1 +1,11 @@
-<p>navtabs works!</p>
+<nav nav-tab-nav-bar>
+<span class="toolbar-flex"></span>
+    <mat-tab-group>
+        <mat-tab label="h 1"></mat-tab>
+        <mat-tab label="h 2"></mat-tab>
+        <mat-tab label="h 3"></mat-tab>
+        <mat-tab label="h 4"></mat-tab>
+        <mat-tab label="h 5"></mat-tab>
+    </mat-tab-group>
+    <span class="toolbar-flex"></span>
+</nav>
