--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,21 +1,21 @@
-<mat-nav-list>
+<mat-nav-list class="sidenav-list">
 
-    <a mat-list-item routerLink="/signin" >
+    <a mat-list-item routerLink="/signin" (click)="onToggleClose()" >
     <mat-icon>input</mat-icon>
     <span>Signin</span>
     </a>
 
-    <a mat-list-item routerLink="/signup" >
+    <a mat-list-item routerLink="/signup" (click)="onToggleClose()" >
         <mat-icon>account_circle</mat-icon>
         <span>Signup</span>
         </a>
 
-        <a mat-list-item routerLink="/accomodation" >
+        <a mat-list-item routerLink="/accomodation" (click)="onToggleClose()" >
             <mat-icon>hotel</mat-icon>
             <span>Accodomation</span>
             </a>
 
-            <a mat-list-item routerLink="/offers" >
+            <a mat-list-item routerLink="/offers" (click)="onToggleClose()" >
                 <mat-icon>loyalty</mat-icon>
                 <span>Offers</span>
                 </a>
