--- a/src/app/navigation/navtabs/navtabs.component.html
+++ b/src/app/navigation/navtabs/navtabs.component.html
@@ -1,11 +1,14 @@
-<nav nav-tab-nav-bar>
-<span class="toolbar-flex"></span>
-    <mat-tab-group>
-        <mat-tab label="h 1"></mat-tab>
-        <mat-tab label="h 2"></mat-tab>
-        <mat-tab label="h 3"></mat-tab>
-        <mat-tab label="h 4"></mat-tab>
-        <mat-tab label="h 5"></mat-tab>
-    </mat-tab-group>
-    <span class="toolbar-flex"></span>
-</nav>
+<div class="navtabs-container">
+
+    <nav nav-tab-nav-bar>
+        <span class="toolbar-flex"></span>
+            <mat-tab-group>
+                <mat-tab label="h 1"></mat-tab>
+                <mat-tab label="h 2"></mat-tab>
+                <mat-tab label="h 3"></mat-tab>
+                <mat-tab label="h 4"></mat-tab>
+                <mat-tab label="h 5"></mat-tab>
+            </mat-tab-group>
+            <span class="toolbar-flex"></span>
+        </nav>
+</div>
